--- a/index.RMD
+++ b/index.RMD
@@ -5,7 +5,7 @@ date: "July 19, 2017"
 site: bookdown::bookdown_site
 # documentclass: book
 output: 
-    #bookdown::html_document2: default
+    bookdown::html_document2: default
     bookdown::gitbook: default
     # bookdown::pdf_book: default
     # bookdown::html_book: default
